public/_new-layout-eventweekly/css/style.css
/* ... */
#header .top-line__button i {
  margin-right: 8px;
}
#header .top-line__link {
  display: inline-block;
  color: #F7931E;
}
@media only screen and (max-width: 695px) {
  #header .top-line {
    padding: 10px 0;
  }
}
#header .middle-bg {
  padding: 5px 0;
  background: #F7931E url(../i/bg-header.png) bottom left;
  text-align: center;
  border: 4px solid #A85E05;
  border-left: 0;
  border-right: 0;
}
#header .logo {
  font-family: "PF Agora Slab Pro Light";
  font-size: 50px;
  font-weight: 300;
  text-align: center;
  text-decoration: none;
  text-shadow: 2px 2px 0px #B56620;
  color: #fff;
}
#header .logo strong {
  font-family: "PF Agora Slab Pro Medium";
  font-weight: 300;
}
#header .filters {
  background: #4D4D4D;
  min-height: 50px;
  padding: 7px 0;
  text-align: center;
}
#header .filters .filters-form__item {
  display: inline-block;
  margin-right: 7px;
  margin-bottom: 7px;
  vertical-align: middle;
}
@media only screen and (max-width: 768px) {
  #header .filters .filters-form__item {
    margin-right: 3px;
  }
}
#header .filters .filters-form__item--input-with-icon {
  position: relative;
}
#header .filters .filters-form__item--input-with-icon i {
  position: absolute;
  color: #F7931E;
  z-index: 20;
  top: 3px;
  left: 8px;
  width: 25px;
  font-size: 22px;
  line-height: 30px;
  text-align: center;
}




#header .filters .filters-form__item--input-with-icon .filters-form__input {
  padding-left: 40px;
  width: 100%;
}
@media only screen and (max-width: 1200px) {
  #header .filters .filters-form__item--input-with-icon {
    width: 180px;
  }
}
#header .filters .filters-form__dropdown {
  -webkit-border-radius: 2px;
  -moz-border-radius: 2px;
  -ms-border-radius: 2px;
  -o-border-radius: 2px;
  border-radius: 2px;
  -webkit-box-shadow: 2px 2px 0px #424242;
  -moz-box-shadow: 2px 2px 0px #424242;
  box-shadow: 2px 2px 0px #424242;
  display: inline-block;
  padding: 10px 15px 9px 15px;
  background: #808080;
  color: #fff;
  cursor: pointer;
  font-family: "Open Sans";
  font-size: 15px;
  text-decoration: none;
}
#header .filters .filters-form__dropdown i {
  font-size: 16px;
  margin-right: 9px;
  color: #ccc;
}
#header .filters .filters-form__dropdown .caret {
  margin-left: 9px;
  color: #ccc;
}
#header .filters .filters-form__input {
  -webkit-border-radius: 2px;
  -moz-border-radius: 2px;
  -ms-border-radius: 2px;
  -o-border-radius: 2px;
  border-radius: 2px;
  font-family: "Open Sans";
  font-size: 15px;
  border: 0;
  outline: 0;
  line-height: 25px;
  padding: 6px 15px 5px 15px;
  color: #808080;
}
#header .filters .filters-form__button {
  -webkit-border-radius: 2px;
  -moz-border-radius: 2px;
  -ms-border-radius: 2px;
  -o-border-radius: 2px;
  border-radius: 2px;
  -webkit-box-shadow: 2px 2px 0px #424242;
  -moz-box-shadow: 2px 2px 0px #424242;
  box-shadow: 2px 2px 0px #424242;
  display: inline-block;
  position: relative;
  padding: 10px 15px;
  background: #CC7718;
  color: #fff;
  cursor: pointer;
  font-family: "Open Sans";
  font-size: 15px;
  text-decoration: none;
}
#header .filters .filters-form__button:active {
  top: 1px;
}
@media only screen and (max-width: 695px) {
  #header .filters .filters-form__button {
    width: 100%;
  }
}
#header .filters .filters-form__divider {
  display: inline-block;
  width: 1px;
  height: 35px;
  margin: 0 15px 0 10px;
  text-align: center;
  vertical-align: top;
  background: #7D7D7D;
}
@media only screen and (max-width: 1023px) {
  #header .filters .filters-form__divider {
    display: block;
    width: 100%;
    height: 1px;
    margin: 7px 0 14px 0;
    background: #555;
  }
}
#header .user-bar {
  position: absolute;
  
  right: 2.3%;
  top: 11px;
  font-family: "Open Sans";
  font-size: 15px;
  color: #F7931E;
  vertical-align: middle;
}
/*
**********************
* =header new fix long username bug
**********************
*/
@media only screen and (max-width: 965px) {
    #header .user-bar {
    position: relative;
  }
}



#header .user-bar a {
  display: block;
  cursor: pointer;
  text-decoration: none;
}
#header .user-bar__avatar {
  -webkit-border-radius: 2px;
  -moz-border-radius: 2px;
  -ms-border-radius: 2px;
  -o-border-radius: 2px;
  border-radius: 2px;
  display: inline-block;
  width: 34px;
  height: 34px;
  margin-right: 10px;
  overflow: hidden;
}
#header .user-bar .caret {
  margin-left: 10px;
}
@media only screen and (max-width: 695px) {
  #header .user-bar .dropdown {
    display: inline-block;
  }
}
@media only screen and (max-width: 695px) {
  #header .user-bar {
    position: relative;
    right: auto;
    top: auto;
    float: right;
  }
}

#footer {
  position: relative;
  width: 100%;
  padding: 20px 0;
  background: #1A1A1A;
  border-top: 2px solid #A86514;
  z-index: 101;
  clear: both;
}
/*new footer*/
#footer .footer_item{
  width: 50%;
  float: left;
  padding-left: 15px;
  font-size: 18px;
}
#footer .footer_item_left{
  text-align: right;
  padding-right: 15px;
}
/*new footer*/

#footer .widgets {
  margin-left: -1.6%;
}
#footer .widgets:before, #footer .widgets:after {
  content: "";
  display: table;
}
#footer .widgets:after {
  clear: both;
}
#footer .widgets .widget {
  float: left;
  padding: 0 0 0 1.6%;
}
#footer .widgets .widget__title {
  color: #F7931E;
  font-family: "Open Sans";
  font-size: 20px;
  font-weight: 300;
  margin-bottom: 25px;
}
@media only screen and (max-width: 480px) {
  #footer .widgets .widget__title {
    font-size: 22px;
  }
}
#footer .widgets .widget__text {
  font-family: "Open Sans";
  font-weight: 300;
  font-size: 14px;
  color: #B3B3B3;
}
@media only screen and (max-width: 480px) {
  #footer .widgets .widget__text {
    font-size: 16px;
  }
}
#footer .widgets .widget a {
  color: #B3B3B3;
}
#footer .widgets .widget ul li {
  margin-bottom: 15px;
}
@media only screen and (max-width: 480px) {
  #footer .widgets .widget ul li {
    margin-bottom: 25px;
  }
}
/* ... */

